refactor: organize root directory - move docs to docs/
- Move GPT_CUSTOM_INSTRUCTIONS.txt to docs/
- Move NEXT_STEPS.md to docs/
- Keep only essential config files at root (.gitignore, .cursorignore, README.md, workspace file)

Root now contains only:
- .gitattributes
- .gitignore
- .cursorignore
- engineering-home.code-workspace
- README.md

--- a/templates/starter-node-service/.cursorignore
+++ b/templates/starter-node-service/.cursorignore
@@ -1,27 +1,6 @@
-# Dependencies
-node_modules/
-.venv/
-__pycache__/
-vendor/
-# Build artifacts
-dist/
-build/
-*.pyc
-*.o
-# Data & logs
-data/
-logs/
-*.csv
-*.parquet
-.cache/
-# Sensitive
+30_DATA/
+40_RUNTIME/
 .env
-secrets/
-*.key
-*.pem
-# Generated
-*.generated.*
-migrations/
-# Misc
-.DS_Store
-.eslintcache
+.env.*
+node_modules/
+__pycache__/
